update: save best model

--- a/Notebooks/Predict_Demo.ipynb
+++ b/Notebooks/Predict_Demo.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1e4c9e20",
    "metadata": {
     "execution": {
@@ -33,19 +33,11 @@
      "shell.execute_reply": "2025-12-01T20:57:25.021206Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train path: /home/udaniel/school/NEU_6105_Finall/Data/cleaned_dataset.csv\n",
-      "Predict input: /home/udaniel/school/NEU_6105_Finall/Data/prediction_sample.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import joblib\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -56,13 +48,15 @@
     "DATA_DIR = NOTEBOOK_DIR.parent / 'Data'\n",
     "TRAIN_PATH = DATA_DIR / 'cleaned_dataset.csv'\n",
     "PRED_PATH = DATA_DIR / 'prediction_sample.csv'\n",
+    "MODEL_PATH = NOTEBOOK_DIR.parent / \"Model\" / \"best_model.pkl\"\n",
+    "print('Model path:', MODEL_PATH)\n",
     "print('Train path:', TRAIN_PATH)\n",
     "print('Predict input:', PRED_PATH)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2a192318",
    "metadata": {
     "execution": {
@@ -72,138 +66,7 @@
      "shell.execute_reply": "2025-12-01T20:57:25.037451Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company</th>\n",
-       "      <th>industry</th>\n",
-       "      <th>headquarter_location</th>\n",
-       "      <th>status</th>\n",
-       "      <th>layoffs_12m</th>\n",
-       "      <th>layoffs_last90d</th>\n",
-       "      <th>days_since_last_layoff</th>\n",
-       "      <th>total_employees_est</th>\n",
-       "      <th>layoff_ratio</th>\n",
-       "      <th>impacted_pct_recent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>glorifi</td>\n",
-       "      <td>fintech</td>\n",
-       "      <td>dallas</td>\n",
-       "      <td>private</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1094</td>\n",
-       "      <td>1209.090909</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>assure</td>\n",
-       "      <td>fintech</td>\n",
-       "      <td>salt lake city</td>\n",
-       "      <td>private</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1092</td>\n",
-       "      <td>1209.090909</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ncx</td>\n",
-       "      <td>renewable energy, forestry</td>\n",
-       "      <td>san francisco</td>\n",
-       "      <td>private</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1087</td>\n",
-       "      <td>1209.090909</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>blockfi</td>\n",
-       "      <td>crypto</td>\n",
-       "      <td>jersey city</td>\n",
-       "      <td>private</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1087</td>\n",
-       "      <td>4906.976744</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>candy digital</td>\n",
-       "      <td>cryptocurrency</td>\n",
-       "      <td>new york</td>\n",
-       "      <td>private</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>1087</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         company                    industry headquarter_location   status  \\\n",
-       "0        glorifi                     fintech               dallas  private   \n",
-       "1         assure                     fintech       salt lake city  private   \n",
-       "2            ncx  renewable energy, forestry        san francisco  private   \n",
-       "3        blockfi                      crypto          jersey city  private   \n",
-       "4  candy digital              cryptocurrency             new york  private   \n",
-       "\n",
-       "   layoffs_12m  layoffs_last90d  days_since_last_layoff  total_employees_est  \\\n",
-       "0        100.0            100.0                    1094          1209.090909   \n",
-       "1        100.0            100.0                    1092          1209.090909   \n",
-       "2        100.0            100.0                    1087          1209.090909   \n",
-       "3        100.0            100.0                    1087          4906.976744   \n",
-       "4         33.0             33.0                    1087           100.000000   \n",
-       "\n",
-       "   layoff_ratio  impacted_pct_recent  \n",
-       "0          0.12                 1.00  \n",
-       "1          0.12                 1.00  \n",
-       "2          0.12                 0.40  \n",
-       "3          0.12                 1.00  \n",
-       "4          0.33                 0.33  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load training data\n",
     "\n",
@@ -218,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fae0112e",
    "metadata": {
     "execution": {
@@ -228,21 +91,9 @@
      "shell.execute_reply": "2025-12-01T20:57:25.051835Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model trained on full dataset. Class balance:\n",
-      "target_high_risk\n",
-      "1    115\n",
-      "0     27\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Train the best model (Decision Tree)\n",
+    "# Load or train the best model (Decision Tree)\n",
     "\n",
     "preprocess = ColumnTransformer(\n",
     "    [('cat', OneHotEncoder(handle_unknown='ignore'), categorical_cols)],\n",
@@ -256,18 +107,26 @@
     "    random_state=42,\n",
     ")\n",
     "\n",
-    "clf = Pipeline([\n",
-    "    ('prep', preprocess),\n",
-    "    ('model', dt_model),\n",
-    "])\n",
-    "clf.fit(X, y)\n",
-    "print('Model trained on full dataset. Class balance:')\n",
+    "if MODEL_PATH.exists():\n",
+    "    clf = joblib.load(MODEL_PATH)\n",
+    "    print(\"Loaded saved model from\", MODEL_PATH)\n",
+    "else:\n",
+    "    clf = Pipeline([\n",
+    "        ('prep', preprocess),\n",
+    "        ('model', dt_model),\n",
+    "    ])\n",
+    "    clf.fit(X, y)\n",
+    "    MODEL_PATH.parent.mkdir(exist_ok=True)\n",
+    "    joblib.dump(clf, MODEL_PATH)\n",
+    "    print(\"Model trained and saved to\", MODEL_PATH)\n",
+    "\n",
+    "print(\"Class balance:\")\n",
     "print(y.value_counts())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9be88c02",
    "metadata": {
     "execution": {
@@ -277,112 +136,7 @@
      "shell.execute_reply": "2025-12-01T20:57:25.061829Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company</th>\n",
-       "      <th>industry</th>\n",
-       "      <th>layoff_ratio</th>\n",
-       "      <th>pred_high_risk</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>addepar</td>\n",
-       "      <td>fintech, data analytics</td>\n",
-       "      <td>0.030000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aqua security</td>\n",
-       "      <td>secops, security</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>superrare</td>\n",
-       "      <td>blockchain, cryptocurrency</td>\n",
-       "      <td>0.120000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>informatica</td>\n",
-       "      <td>big data, cloud computing</td>\n",
-       "      <td>0.070000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>bigcommerce</td>\n",
-       "      <td>enterprise software, ecommerce</td>\n",
-       "      <td>0.120000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>wonder</td>\n",
-       "      <td>food delivery, ecommerce</td>\n",
-       "      <td>0.070000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>citizen</td>\n",
-       "      <td>surveillance</td>\n",
-       "      <td>0.027293</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>vimeo</td>\n",
-       "      <td>mediaentertainment</td>\n",
-       "      <td>0.120000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         company                        industry  layoff_ratio  pred_high_risk\n",
-       "0        addepar         fintech, data analytics      0.030000               0\n",
-       "1  aqua security                secops, security      0.100000               1\n",
-       "2      superrare      blockchain, cryptocurrency      0.120000               1\n",
-       "3    informatica       big data, cloud computing      0.070000               1\n",
-       "4    bigcommerce  enterprise software, ecommerce      0.120000               1\n",
-       "5         wonder        food delivery, ecommerce      0.070000               1\n",
-       "6        citizen                    surveillance      0.027293               0\n",
-       "7          vimeo              mediaentertainment      0.120000               1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load prediction CSV and run inference\n",
     "\n",
@@ -422,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
